syntax = "proto3";

package stub.model;

option go_package = "data-handler/model";

import 'model/audit.proto';
import 'model/common.proto';

enum DataSourceBackendType {
  POSTGRESQL = 0;
  MYSQL = 1;
  ORACLE = 2;
  MONGODB = 3;
}

message PostgresqlOptions {
  string username = 1;
  string password = 2;
  string host = 3;
  uint32 port = 4;
  string dbName = 5;
  string defaultSchema = 6;
}

message DataSource {
  string id = 1; // id; read only
  DataSourceBackendType backend = 2;
  DataType type = 4; // read only
  string name = 5;
  string description = 6;

  oneof options {
    PostgresqlOptions postgresqlParams = 7;
  }
  AuditData auditData = 101; // read only
  uint32 version = 102; // read only
}
